--- a/homework2.html
+++ b/homework2.html
@@ -12,9 +12,7 @@
     <h1>Homework 2 John Swinea</h1>
     <h2>Durham, NC Streets, My House, and Retention Pond</h2>
     <a href="https://www.openstreetmap.org/export#map=15/35.9806/-78.9830"><h3>Vector durhamncstreets was sourced here</h3>
-    <a href="./data/durhamncstreets.geojson"></a>
-    <img width="500" src="./pngs/Homework 2.png" alt=""
-    
-
+    <a href="https://github.com/johnswinea/homework2/tree/e264e3cebeb422fc6914b0d717e668b2dc0c7b8c/data"><h4>Vector data files</h4>
+    <img width="500" src="./pngs/Homework 2.png" alt="">
 </body>
 </html>
